# syncopate

./: .gitignore  README.md  init.sh  pyproject.toml  requirements.txt
src/syncopate/: __init__.py  main.py
src/syncopate/combinators/: __init__.py  _parallelize.py  collector.py  tap.py
